update JVM args